--- a/Vondracek_W10_DSP2021.ipynb
+++ b/Vondracek_W10_DSP2021.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Vondracek_W10_DSP2021.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNq0PwtyQMZlsiRXmldug8V",
+      "authorship_tag": "ABX9TyMvE/J5XSrjgvVGk+tEXuRZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,23 +174,23 @@
           "height": 199
         },
         "id": "UON8NP5aDexm",
-        "outputId": "b6379853-6d4d-4306-9a7f-8070e0ad0ff6"
+        "outputId": "dae7d63f-4ccc-4ca0-a53a-54b43328ed27"
       },
       "source": [
         "from genomic_benchmarks.data_check import info\n",
-        "info('human_nontata_promoters', version=0)\n"
+        "info('demo_human_or_worm', version=0)\n"
       ],
-      "execution_count": 16,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Dataset `human_nontata_promoters` has 2 classes: negative, positive.\n",
+            "Dataset `demo_human_or_worm` has 2 classes: human, worm.\n",
             "\n",
-            "All lenghts of genomic intervals equals 251.\n",
+            "All lenghts of genomic intervals equals 200.\n",
             "\n",
-            "Totally 36131 sequences have been found, 27097 for training and 9034 for testing.\n"
+            "Totally 100000 sequences have been found, 75000 for training and 25000 for testing.\n"
           ]
         },
         {
@@ -221,27 +221,27 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>negative</th>\n",
-              "      <td>12355</td>\n",
-              "      <td>4119</td>\n",
+              "      <th>human</th>\n",
+              "      <td>37500</td>\n",
+              "      <td>12500</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>positive</th>\n",
-              "      <td>14742</td>\n",
-              "      <td>4915</td>\n",
+              "      <th>worm</th>\n",
+              "      <td>37500</td>\n",
+              "      <td>12500</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "          train  test\n",
-              "negative  12355  4119\n",
-              "positive  14742  4915"
+              "       train   test\n",
+              "human  37500  12500\n",
+              "worm   37500  12500"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 37
         }
       ]
     },
@@ -252,19 +252,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eHzRVj_cDzYI",
-        "outputId": "51624942-b173-4a7d-b978-82fd54a655d8"
+        "outputId": "7774a722-b863-443e-9afb-605a6df44549"
       },
       "source": [
         "from genomic_benchmarks.loc2seq import download_dataset\n",
-        "download_dataset(\"human_nontata_promoters\", version=0)"
+        "download_dataset(\"demo_human_or_worm\", version=0)"
       ],
-      "execution_count": 18,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading 1VdUg0Zu8yfLS6QesBXwGz1PIQrTW3Ze4 into /root/.genomic_benchmarks/human_nontata_promoters.zip... Done.\n",
+            "Downloading 1Vuc44bXRISqRDXNrxt5lGYLpLsJbrSg8 into /root/.genomic_benchmarks/demo_human_or_worm.zip... Done.\n",
             "Unzipping...Done.\n"
           ]
         },
@@ -272,11 +272,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "PosixPath('/root/.genomic_benchmarks/human_nontata_promoters')"
+              "PosixPath('/root/.genomic_benchmarks/demo_human_or_worm')"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 38
         }
       ]
     },
@@ -290,10 +290,10 @@
         "import tensorflow as tf\n",
         "\n",
         "BATCH_SIZE = 32\n",
-        "SEQ_TRAIN_PATH = '/root/.genomic_benchmarks/human_nontata_promoters/train'\n",
-        "CLASSES = ['negative', 'positive']"
+        "SEQ_TRAIN_PATH = '/root/.genomic_benchmarks/demo_human_or_worm/train'\n",
+        "CLASSES = ['human', 'worm']"
       ],
-      "execution_count": 19,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UR_-NNQZ8a9q",
-        "outputId": "ab12e47f-b57a-4df5-e314-a24250e13551"
+        "outputId": "3cbc775f-a4ec-4078-9d62-0bdac8f932f7"
       },
       "source": [
         "train_set = tf.keras.preprocessing.text_dataset_from_directory(\n",
@@ -312,13 +312,21 @@
         "    class_names=CLASSES\n",
         ")"
       ],
-      "execution_count": 20,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found 27097 files belonging to 2 classes.\n"
+            "Found 75000 files belonging to 2 classes.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/data/ops/dataset_ops.py:4527: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+            "  \"Even though the `tf.config.experimental_run_functions_eagerly` \"\n"
           ]
         }
       ]
@@ -330,29 +338,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E0eG9OraCZNT",
-        "outputId": "dc19b058-7103-4d8e-91b2-3e8d314c2563"
+        "outputId": "c8339a8f-27af-48c2-ea06-196e003a017d"
       },
       "source": [
         "list(train_set)[0][0][0]"
       ],
-      "execution_count": 21,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(), dtype=string, numpy=b'CTCCACCCTCCCAGCTGTGCGTTCATAGCGACCGCCCTCCCTGTAGGGACGCACGGATCTGGTGGTGGAGTCTTGGCCGGCAGGACTGGACAGGAACCGAAGGGGCGAGGCGGGTCCGGGGGTGGTGCGCTCCAATTGGGTGCTGTCCCCAGGGGGTGGGGCCTGATCCCCTATTTCCCGGCGCGCCGGGATCCTGCCACAGCTGCTGCCCACACCGCGCTCAGCGCCTTCACTGCCATCCCCGCTGTCCT'>"
+              "<tf.Tensor: shape=(), dtype=string, numpy=b'ATATACTAAAATAGTGTTGTGATTTTTTATTTTCAGTTCTACAGTGATAGTCAAAATCCAACAGATGTTGGAACTGAAAACGGTGTTGGTACCGCAAATGTTGTTATGAATTGTGTCAACGGACAATGGGTGAAAGAAGGAATTGTAATAAACGATGTCGAGTGTCAAATCATTACCTGAAGGGTATAAGGTGTGAATAT'>"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 43
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4MxPkuzMHudT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4MxPkuzMHudT",
+        "outputId": "fa008016-8dca-4dc3-df2c-9e66175569df"
       },
       "source": [
         "\n",
@@ -369,8 +381,17 @@
         "\n",
         "train_ds = train_set.map(vectorize_text)"
       ],
-      "execution_count": 30,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/data/ops/dataset_ops.py:4527: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+            "  \"Even though the `tf.config.experimental_run_functions_eagerly` \"\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -385,7 +406,7 @@
         "              metrics=[tf.metrics.BinaryAccuracy(threshold=0.0), binary_f1_score])\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -395,7 +416,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fMigeYNqIopx",
-        "outputId": "f21b225b-0916-4a04-d486-0ec21129d207"
+        "outputId": "c9f536d9-3421-45eb-9814-265cf18c0260"
       },
       "source": [
         "tf.config.run_functions_eagerly(True)\n",
@@ -408,32 +429,32 @@
         "    epochs=EPOCHS)\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "847/847 [==============================] - 74s 87ms/step - loss: 0.4336 - binary_accuracy: 0.7991 - f1_score: 0.7865\n",
+            "2344/2344 [==============================] - 204s 87ms/step - loss: 0.2934 - binary_accuracy: 0.8835 - f1_score: 0.8633\n",
             "Epoch 2/10\n",
-            "847/847 [==============================] - 74s 87ms/step - loss: 0.3833 - binary_accuracy: 0.8269 - f1_score: 0.8194\n",
+            "2344/2344 [==============================] - 194s 83ms/step - loss: 0.1994 - binary_accuracy: 0.9212 - f1_score: 0.9148\n",
             "Epoch 3/10\n",
-            "847/847 [==============================] - 74s 87ms/step - loss: 0.3559 - binary_accuracy: 0.8417 - f1_score: 0.8346\n",
+            "2344/2344 [==============================] - 211s 90ms/step - loss: 0.1792 - binary_accuracy: 0.9303 - f1_score: 0.9244\n",
             "Epoch 4/10\n",
-            "847/847 [==============================] - 75s 88ms/step - loss: 0.3381 - binary_accuracy: 0.8515 - f1_score: 0.8471\n",
+            "2344/2344 [==============================] - 204s 87ms/step - loss: 0.1698 - binary_accuracy: 0.9330 - f1_score: 0.9285\n",
             "Epoch 5/10\n",
-            "847/847 [==============================] - 76s 90ms/step - loss: 0.3179 - binary_accuracy: 0.8601 - f1_score: 0.8563\n",
+            "2344/2344 [==============================] - 201s 86ms/step - loss: 0.1623 - binary_accuracy: 0.9355 - f1_score: 0.9308\n",
             "Epoch 6/10\n",
-            "847/847 [==============================] - 78s 92ms/step - loss: 0.3038 - binary_accuracy: 0.8674 - f1_score: 0.8620\n",
+            "2344/2344 [==============================] - 204s 87ms/step - loss: 0.1565 - binary_accuracy: 0.9385 - f1_score: 0.9342\n",
             "Epoch 7/10\n",
-            "847/847 [==============================] - 81s 96ms/step - loss: 0.2890 - binary_accuracy: 0.8750 - f1_score: 0.8736\n",
+            "2344/2344 [==============================] - 192s 82ms/step - loss: 0.1524 - binary_accuracy: 0.9397 - f1_score: 0.9357\n",
             "Epoch 8/10\n",
-            "847/847 [==============================] - 83s 98ms/step - loss: 0.2748 - binary_accuracy: 0.8839 - f1_score: 0.8820\n",
+            "2344/2344 [==============================] - 190s 81ms/step - loss: 0.1471 - binary_accuracy: 0.9420 - f1_score: 0.9382\n",
             "Epoch 9/10\n",
-            "847/847 [==============================] - 81s 96ms/step - loss: 0.2693 - binary_accuracy: 0.8884 - f1_score: 0.8853\n",
+            "2344/2344 [==============================] - 194s 83ms/step - loss: 0.1445 - binary_accuracy: 0.9440 - f1_score: 0.9403\n",
             "Epoch 10/10\n",
-            "847/847 [==============================] - 81s 96ms/step - loss: 0.2567 - binary_accuracy: 0.8915 - f1_score: 0.8907\n"
+            "2344/2344 [==============================] - 188s 80ms/step - loss: 0.1429 - binary_accuracy: 0.9439 - f1_score: 0.9389\n"
           ]
         }
       ]
@@ -445,13 +466,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "88GrDZIWNn_s",
-        "outputId": "e8f502a2-0e54-4ce1-a63e-4136e16d062d"
+        "outputId": "0b014d1a-dd7e-4ff5-d9d4-5648d7d78c90"
       },
       "source": [
         "\n",
         "\n",
         "test_dset = tf.keras.preprocessing.text_dataset_from_directory(\n",
-        "    '/root/.genomic_benchmarks/human_nontata_promoters/test',\n",
+        "    '/root/.genomic_benchmarks/demo_human_or_worm/test',\n",
         "    batch_size=BATCH_SIZE,\n",
         "    class_names=CLASSES,\n",
         "    shuffle=False)\n",
@@ -459,13 +480,13 @@
         "test_ds = test_dset.map(vectorize_text)\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found 9034 files belonging to 2 classes.\n"
+            "Found 25000 files belonging to 2 classes.\n"
           ]
         },
         {
@@ -485,29 +506,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YuSXeNxeN9qS",
-        "outputId": "5c013932-d06b-451f-f8e6-ea7ab16b2ae6"
+        "outputId": "207f7476-e32d-47f8-f89c-c2293fa4f5a9"
       },
       "source": [
         "model.evaluate(test_ds)"
       ],
-      "execution_count": 36,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "283/283 [==============================] - 12s 41ms/step - loss: 0.4400 - binary_accuracy: 0.8110 - f1_score: 0.7580\n"
+            "782/782 [==============================] - 29s 37ms/step - loss: 0.1652 - binary_accuracy: 0.9348 - f1_score: 0.9188\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.44004762172698975, 0.8110471367835999, 0.7580000162124634]"
+              "[0.16521982848644257, 0.9348400235176086, 0.9188383221626282]"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 48
         }
       ]
     }
