--- a/extras/exercises/00_pytorch_fundamentals_exercises.ipynb
+++ b/extras/exercises/00_pytorch_fundamentals_exercises.ipynb
@@ -133,11 +133,11 @@
         "tensor_2.t()"
       ],
       "metadata": {
-        "id": "AqYjZ1Rp-0VH",
-        "outputId": "b704a4d7-3f03-43a4-aece-fdec978e9244",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AqYjZ1Rp-0VH",
+        "outputId": "b704a4d7-3f03-43a4-aece-fdec978e9244"
       },
       "execution_count": 21,
       "outputs": [
@@ -160,11 +160,11 @@
         "mat_mul"
       ],
       "metadata": {
-        "id": "lvZBGT1s_I1C",
-        "outputId": "75f0eb43-ef16-4e84-df7f-d812f3fd3a64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lvZBGT1s_I1C",
+        "outputId": "75f0eb43-ef16-4e84-df7f-d812f3fd3a64"
       },
       "execution_count": 27,
       "outputs": [
@@ -192,11 +192,11 @@
         "torch.mm(rand_tensor, tensor_2)"
       ],
       "metadata": {
-        "id": "vcBNUOpY_ZI_",
-        "outputId": "ac19785f-9726-4f90-9f3b-db2d19c000fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vcBNUOpY_ZI_",
+        "outputId": "ac19785f-9726-4f90-9f3b-db2d19c000fd"
       },
       "execution_count": 26,
       "outputs": [
@@ -279,6 +279,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!nvidia-smi"
+      ],
+      "metadata": {
+        "id": "ksAuvXoCCKf5",
+        "outputId": "c395749a-35c9-47fc-ca5c-5aa9d25412d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sat Feb  8 10:09:05 2025       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   30C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+      ],
+      "metadata": {
+        "id": "wZqlwGHDCPRH"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### 5. Speaking of random seeds, we saw how to set it with `torch.manual_seed()` but is there a GPU equivalent? (hint: you'll need to look into the documentation for `torch.cuda` for this one)\n",
@@ -297,7 +350,7 @@
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
-      "execution_count": 36,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -322,14 +375,44 @@
       "cell_type": "code",
       "source": [
         "# Set random seed\n",
-        "\n",
+        "torch.manual_seed(1234)\n",
         "\n",
         "# Check for access to GPU\n",
         "\n",
-        "# Create two random tensors on GPU\n"
+        "# Create two random tensors on GPU\n",
+        "tens_a = torch.rand(2, 3).to(device)\n",
+        "tens_b = torch.rand(2, 3).to(device)\n",
+        "tens_a, tens_b"
       ],
       "metadata": {
-        "id": "azXExiFZj5nm"
+        "id": "azXExiFZj5nm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33f2f1ff-3d08-4e9b-f383-370d8a399d10"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.0290, 0.4019, 0.2598],\n",
+              "         [0.3666, 0.0583, 0.7006]], device='cuda:0'),\n",
+              " tensor([[0.0518, 0.4681, 0.6738],\n",
+              "         [0.3315, 0.7837, 0.5631]], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZLtgoal4C1Hs"
       },
       "execution_count": null,
       "outputs": []
@@ -353,13 +436,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
+        "# Perform matmul on tensor_A and tensor_B\n",
+        "tens_mul = tens_a @ tens_b.t()\n",
+        "tens_mul"
       ],
       "metadata": {
-        "id": "fAeG7ox0lHEO"
+        "id": "fAeG7ox0lHEO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a89387d-b243-4e9e-bcd3-ac8768524488"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.3647, 0.4709],\n",
+              "        [0.5184, 0.5617]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -374,14 +475,33 @@
       "cell_type": "code",
       "source": [
         "# Find max\n",
+        "max = tens_mul.max()\n",
         "\n",
-        "# Find min\n"
+        "# Find min\n",
+        "min = tens_mul.min()\n",
+        "\n",
+        "max, min"
       ],
       "metadata": {
-        "id": "Fu8_3mZpllOd"
+        "id": "Fu8_3mZpllOd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3417e8d-3ba7-4eb1-965a-24523ce84016"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(0.5617, device='cuda:0'), tensor(0.3647, device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -396,15 +516,31 @@
       "cell_type": "code",
       "source": [
         "# Find arg max\n",
+        "tens_mul.argmax()\n",
         "\n",
-        "\n",
-        "# Find arg min\n"
+        "# Find arg min\n",
+        "tens_mul.argmin()"
       ],
       "metadata": {
-        "id": "CCEKt4K2lsfQ"
+        "id": "CCEKt4K2lsfQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "45978ddf-8198-4c41-ec69-1ed9dc1e357d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0, device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -429,18 +565,43 @@
       "cell_type": "code",
       "source": [
         "# Set seed\n",
-        "\n",
+        "torch.manual_seed(7)\n",
         "\n",
         "# Create random tensor\n",
-        "\n",
+        "tensor_reshaped = torch.rand(1, 1, 1, 10)\n",
         "\n",
         "# Remove single dimensions\n",
-        "\n",
+        "tensor_reshaped.reshape(10)\n",
         "\n",
         "# Print out tensors and their shapes\n"
       ],
       "metadata": {
-        "id": "TQ9zbRzVl1jV"
+        "id": "TQ9zbRzVl1jV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf18662b-89cd-43b0-d5f9-d95cc9928a8d"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+              "        0.8513])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HMnWkMs7EMKl"
       },
       "execution_count": null,
       "outputs": []
