--- a/03_PyTorch_ComputerVision.ipynb
+++ b/03_PyTorch_ComputerVision.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmrhbmiYQS+pfQhSnbQeQ7",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOoPlMQeSnrdAozkRpERkIG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,13 +29,86 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# PyTorch 03 - Computer Vision"
+      ],
       "metadata": {
-        "id": "98sP4u0UZ7A6"
+        "id": "J6AEmIn1eowi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[torch vision module](https://pytorch.org/vision/stable/index.html):\n",
+        "- datasets\n",
+        "- models\n",
+        "- transforms\n",
+        "- Dataset\n",
+        "- DataLoader"
+      ],
+      "metadata": {
+        "id": "YH6Mhl9ufJfQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# base pytorch\n",
+        "import torch\n",
+        "from torch import nn\n",
+        "\n",
+        "# torchvision\n",
+        "import torchvision\n",
+        "from torchvision import datasets\n",
+        "from torchvision import transforms\n",
+        "from torchvision.transforms import ToTensor\n",
+        "\n",
+        "# matplotlib\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 397
+        },
+        "id": "3KlLEFaKexou",
+        "outputId": "5d115aba-f5a0-4b82-cdde-691299f64d54"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'torchvisions'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-0193ff377ff6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchvision\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchvision\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchvisions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransforms\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mToTensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# matplotlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torchvisions'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8Bd5IA1kgABi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
