--- a/intermediate_python_refresh.ipynb
+++ b/intermediate_python_refresh.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4EY/yCwEh/x3K0dK+LORU",
+      "authorship_tag": "ABX9TyM13qZ8AsJid3Y/92+xmD9F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,16 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Úkol 1\n",
+        "Napište takový regulární výraz, který ve slovníku (slovnik.txt) vyhledá následující vzory. Využijte předpřipravenou funkci find_regexp"
+      ],
+      "metadata": {
+        "id": "4qY8QUHGGFss"
+      }
     },
     {
       "cell_type": "code",
@@ -197,6 +207,68 @@
       ],
       "metadata": {
         "id": "BUNbc5mfEq9O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TZNuCxVdFgsX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Úkol 2\n",
+        "Najděte všechna čísla ze zadaného textu pomocí regulárního výrazu.\n",
+        "\n",
+        "Tj. pro řetězec \"test43543lfdsfdsfl534543fdgl432fr\" to bude:  \n",
+        "- 43543  \n",
+        "- 534543  \n",
+        "- 432  \n",
+        "\n",
+        "*Nápověda*  \n",
+        "\n",
+        "Použijte speciální symbol \\d, který označuje libovolnou číslici, a znak +, který znamená \"jeden nebo více znaků\"."
+      ],
+      "metadata": {
+        "id": "-UGMVRnSFhcl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "O0uG96rzFi__"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Úkol 3\n",
+        "Napište program, který pomocí regulárního výrazu zkontroluje, zda je zadané telefonní číslo validní.Validní čísla mají tyto formáty:\n",
+        "\n",
+        "- 48123456789\n",
+        "- +48123456789\n",
+        "- 0048123456789  \n",
+        "\n",
+        "Na začátku použijte '48', '+48' nebo '0048' a poté 9 číslic."
+      ],
+      "metadata": {
+        "id": "ahn1HwqSF2iX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "P_3h16exGA6r"
       },
       "execution_count": null,
       "outputs": []
